--- a/savedsearch-web/testenv.properties
+++ b/savedsearch-web/testenv.properties
@@ -1,6 +1,6 @@
-#Wed, 05 Aug 2015 23:40:23 -0700
+#Mon, 30 Nov 2015 22:18:08 -0800
 
-hostname=slc05mwm.us.oracle.com
+hostname=slc07ctj.us.oracle.com
 port=7001
 #weblogic:password1
 #authToken=Basic d2VibG9naWM6cGFzc3dvcmQx
