--- a/tests/suites/emcpssf_qa_test.gradle
+++ b/tests/suites/emcpssf_qa_test.gradle
@@ -76,7 +76,7 @@ dependencies {
 
 
 
-task DeploySSFAPI(type:Exec,dependsOn:cleanUpDB) {
+task DeploySSFAPI(type:Exec) {
 
         commandLine 'gradle', '-p', getGitRoot()+'/savedsearch-ear/', 'appServerDeploy'
         }
@@ -89,6 +89,9 @@ task PropsCopy(type: Copy,dependsOn: DeploySSFAPI) {
 
 
      task QATest(type:EMTest,dependsOn: PropsCopy){
+ doFirst{
+tasks.cleanUpDB.execute()
+}
  include "oracle/sysman/emSDK/emaas/platform/savedsearch/test/category/*"
 include "oracle/sysman/emSDK/emaas/platform/savedsearch/test/common/*"
 include "oracle/sysman/emSDK/emaas/platform/savedsearch/test/exception/*"
