--- a/tests/suites/emcpssf_dev_test.gradle
+++ b/tests/suites/emcpssf_dev_test.gradle
@@ -70,7 +70,7 @@ dependencies {
 
 
 
-task DeploySSFAPI(type:Exec,dependsOn:cleanUpDB) {
+task DeploySSFAPI(type:Exec) {
 
         commandLine 'gradle', '-p', getGitRoot()+'/savedsearch-ear/', 'appServerDeploy'
         }
@@ -85,6 +85,9 @@ task PropsCopy(type: Copy,dependsOn: DeploySSFAPI) {
 
      task DEVTest(type:EMTest,dependsOn:PropsCopy){	
 	sleep( 300000)
+	doFirst{
+	tasks.cleanUpDB.execute()
+}
 	include "oracle/sysman/emaas/savedsearch/UtilTest.class"
 	include "oracle/sysman/emaas/savedsearch/JSONUtilTest.class"
 	include "oracle/sysman/emaas/savedsearch/EntityJsonUtilTest.class"			
