fix build error when enable cc

--- a/codeCoverage/codeCoverage.gradle
+++ b/codeCoverage/codeCoverage.gradle
@@ -278,9 +278,9 @@ sonarRunner { skipProject = true }
 jacoco { enabled = false }}
 
 
-project(':savedsearch-tools') {
-sonarRunner { skipProject = true }
-jacoco { enabled = false }}
+//project(':savedsearch-tools') {
+//sonarRunner { skipProject = true }
+//jacoco { enabled = false }}
       }
     }
 
