--- a/savedsearch-web/build.gradle
+++ b/savedsearch-web/build.gradle
@@ -146,11 +146,21 @@ task ftpRestDoc << {
 sourceSets {
 	test{
 		java {
-			srcDirs = ['src/test/java']
+			srcDirs = ['src/integTest/java']
 		}
-	resources.srcDirs = ['src/test/java']
+	resources.srcDirs = ['src/integTest/java']
 	}
  }
+
+test {
+        useTestNG()
+        {
+                //We explicity include only tests annotate as s1 or s2 - they are "short-running" tests,
+                //if you wish to run ALL tests within this projet - remove following.
+                includeGroups 's1' ,'s2'
+        }
+}
+
  
 dependencies {
 	providedCompile project(':savedsearch-entities'){transitive = false}
