--- a/tests/suites/emcpssf.gradle.properties
+++ b/tests/suites/emcpssf.gradle.properties
@@ -4,5 +4,4 @@
 //artifactory_user=emaas
 //artifactory_password={DESede}sTj5j01KKq9J2Or/dibOig==
 //artifactory_repoName=emaas-virtual
-integDeployVersion=1.1+
-
+omctfVersion=1.2.+
