--- a/tests/suites/emcpssf_update_test_3n.gradle
+++ b/tests/suites/emcpssf_update_test_3n.gradle
@@ -29,6 +29,7 @@ buildscript {
     }
     dependencies {
         classpath group: 'com.oracle.emaas.emdi', name: 'TestInfraPlugin', version: "${testinfraVersion}", transitive: true
+	classpath group: "com.oracle.omc.omctf.testsdk", name: "omctf_commontasks", version: "${omctfVersion}"
     }
 }
 repositories {
@@ -37,6 +38,21 @@ repositories {
     }
 }
 apply plugin: 'TestInfraPlugin'
+// Uncomment below line once EMDI-6096 is fixed
+// apply from: getSingleFileInConfiguration(project.buildscript.configurations.classpath,"omctf_commontasks")
+/** Start of WA for EMDI-6096 */
+def getAbsoluteFilePath(artifactNameToSearch) {
+    absPath=""
+    buildscript.configurations.classpath.resolve().each {
+        String absolutePath=it.getAbsolutePath();
+        if(absolutePath.contains(artifactNameToSearch)){
+            absPath=absolutePath
+        }
+    }
+    return absPath
+}
+apply from: getAbsoluteFilePath("omctf_commontasks")
+/** End of WA for EMDI-6096 */
 import com.oracle.emdi.gradle.testinfra.tasks.EMTest;
 /* *************************************************************************************************
  *                   END OF TEST-INFRA-BLOCK
@@ -53,61 +69,17 @@ dependencies {
     testConfig(group: 'com.oracle.emaas.emcpssf', name: 'savedsearch-tools-integ-tests', version: '0.1'){
 exclude('module':'groovy')
 }
-testConfig group: 'com.oracle.emdi.test', name: 'emaas_smalldeployment', version: "${integDeployVersion}"
 
 configurations{
 restAssured.exclude module: 'groovy'
 }
 }
-task copyDependencies(type: Copy) {
-    from configurations.lrgConfig
-    into System.env.T_WORK
-}
-task small_deploy_3n_block(type: EMTest) {
-    onlyIf {!System.env.SMALLDEPLOY_IGNORESETUP}
-    options.suiteXmlBuilder().suite('name': 'lrgemcpdf_dev_test_3n') {
-        test('name': 'emaas_setup_small_deploy') {
-            classes([:]) {
-                'class'('name': 'oracle.sysman.test.emaas.integ.EmaasSmallDeploy3n') {
-                    methods([:]) {
-                        'include' ('name': 'setupEmaasSmallDeploy')
-                    }
-                }
-        //      'class'('name': 'oracle.sysman.test.emaas.integ.EmaasSanityTests')
-            }
-        }
-    }
-    useWebdriver = true
-    useRestAssured = true
+
+task UPDATETest(type:EMTest,dependsOn: omcSetup){
+	include 'oracle/sysman/emSDK/emaas/platform/updatesearch/test/*'
+	include 'oracle/sysman/emSDK/emaas/platform/updatesearch/test/common/*'
+	include 'oracle/sysman/emSDK/emaas/platform/updatesearch/test/updatesearchexception/*'
 }
 
-
-
-
-
-
-
-
-     task UPDATETest(type:EMTest,dependsOn: small_deploy_3n_block){
-include 'oracle/sysman/emSDK/emaas/platform/updatesearch/test/*'
-include 'oracle/sysman/emSDK/emaas/platform/updatesearch/test/common/*'
-include 'oracle/sysman/emSDK/emaas/platform/updatesearch/test/updatesearchexception/*'
-}
-
-task small_deploy_3n_cleanup(type: EMTest) {
-    onlyIf {!System.env.SMALLDEPLOY_IGNORESETUP}
-    options.suiteXmlBuilder().suite('name': 'lrgemctas_uitsts_3n') {
-        test('name': 'emaas_setup_small_deploy') {
-            classes([:]) {
-                'class'('name': 'oracle.sysman.test.emaas.integ.EmaasSmallDeploy3n') {
-                    methods([:]) {
-                        'include' ('name': 'logCollectionAndPostCleanup')
-                    }
-                }
-            }
-        }
-    }
- mustRunAfter ([small_deploy_3n_block,UPDATETest])
-}
-
-task emcpssf_update_test_3n (dependsOn: [UPDATETest, small_deploy_3n_cleanup])
+omcTeardown.mustRunAfter(UPDATETest)
+task emcpssf_update_test_3n (dependsOn: [UPDATETest, omcTeardown])
