--- a/tests/suites/emcpssf_dev_test_3n.gradle
+++ b/tests/suites/emcpssf_dev_test_3n.gradle
@@ -28,27 +28,15 @@ buildscript {
             url = "${artifactory_contextUrl}/${artifactory_virtual_repoKey}" }
     }
     dependencies {
+	classpath group: "com.oracle.emaas.emdi", name: "DevInfraPlugin", version: "${devinfraVersion}", transitive: true
         classpath group: 'com.oracle.emaas.emdi', name: 'TestInfraPlugin', version: "${testinfraVersion}", transitive: true
 	classpath group: "com.oracle.omc.omctf.testsdk", name: "omctf_commontasks", version: "${omctfVersion}"
     }
 }
 apply from: 'setup.gradle'
+apply plugin: 'DevInfraPlugin'
 apply plugin: 'TestInfraPlugin'
-// Uncomment below line once EMDI-6096 is fixed
-// apply from: getSingleFileInConfiguration(project.buildscript.configurations.classpath,"omctf_commontasks")
-/** Start of WA for EMDI-6096 */
-def getAbsoluteFilePath(artifactNameToSearch) {
-    absPath=""
-    buildscript.configurations.classpath.resolve().each {
-        String absolutePath=it.getAbsolutePath();
-        if(absolutePath.contains(artifactNameToSearch)){
-            absPath=absolutePath
-        }
-    }
-    return absPath
-}
-apply from: getAbsoluteFilePath("omctf_commontasks")
-/** End of WA for EMDI-6096 */
+apply from: getAbsoluteFilePath(project.buildscript.configurations.classpath,"omctf_commontasks")
 import com.oracle.emdi.gradle.testinfra.tasks.EMTest;
 /* *************************************************************************************************
  *                   END OF TEST-INFRA-BLOCK
