--- a/tests/suites/emcpssf_qa_test.gradle
+++ b/tests/suites/emcpssf_qa_test.gradle
@@ -30,7 +30,8 @@ buildscript {
     }
     dependencies {
         classpath group: 'com.oracle.emaas.emdi', name: 'TestInfraPlugin', version: "${testinfraVersion}", transitive: true
-    }
+	classpath group:"com.oracle.emaas.emdi", name: "DevInfraPlugin", version: "1.0+", transitive: true      
+	}
 }
 repositories {
     maven {
@@ -39,6 +40,7 @@ repositories {
 }
 apply from: 'setup.gradle'
 apply plugin: 'TestInfraPlugin'
+apply plugin: 'DevInfraPlugin'
 import com.oracle.emdi.gradle.testinfra.tasks.EMTest;
 /* ************************************************************************************************
  *                   END OF TEST-INFRA-BLOCK
@@ -64,10 +66,6 @@ dependencies {
 	testConfig(group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.0'){ transitive = false }
 	testConfig(group: 'org.apache.logging.log4j', name:'log4j-core', version:'2.0.1'){ transitive = false }
   testConfig(group: 'org.apache.logging.log4j', name:'log4j-api', version:'2.0.1'){ transitive = false }
-        testConfig(group: 'org.codehaus.jettison', name: 'jettison', version: '1.3.4'){transitive = false}
-	testConfig(group: 'org.codehaus.jackson', name: 'jackson-core-asl', version: '1.9.13'){transitive = false}
-        testConfig(group: 'org.codehaus.jackson', name: 'jackson-mapper-asl', version: '1.9.13'){transitive = false}
-        testConfig(group: 'org.codehaus.jackson', name: 'jackson-xc', version: '1.9.2'){transitive = false}
 
 	configurations{
 		restAssured.exclude module: 'groovy'
@@ -78,9 +76,9 @@ dependencies {
 
 
 task DeploySSFAPI(type:Exec) {
-
-        commandLine 'gradle', '-p', getGitRoot()+'/savedsearch-ear/', 'appServerDeploy'
-        }
+    executable = project.gradle.gradleHomeDir.absolutePath + '/bin/gradle'
+    args '-p',  project.properties['emdi.GIT_VIEW_ROOT'] +'/savedsearch-ear/', 'appServerDeploy'
+}
 task PropsCopy(type: Copy,dependsOn: DeploySSFAPI) {
    from '/net/slc07ctj/scratch/emaas/setuplogs/'
    into '../../oracle/work/'
