Set devinfraVersion property

--- a/gradle.properties
+++ b/gradle.properties
@@ -21,8 +21,10 @@ remote_restdoc_dir=restdoc
 
 # Sonar runner (Code coverage reports) requires more memory to complete
 org.gradle.jvmargs=-XX:MaxPermSize=2g
-
-testinfraVersion=1.1+
+#==============================================================================
+devinfraVersion=1.0.+
+testinfraVersion=1.1.+
+#==============================================================================
 artifactory_repoName=emaas-virtual
 artifactory_repoKey=emaas-sandbox-local
 publishGroup=com.oracle.emaas.emcpssf
