--- a/savedsearch-web/build.gradle
+++ b/savedsearch-web/build.gradle
@@ -187,14 +187,13 @@ dependencies {
 	providedCompile(group: 'org.apache.httpcomponents', name:'httpclient', version:'4.3.1'){transitive = false}
 	providedCompile(group: 'org.apache.httpcomponents', name:'httpcore', version:'4.3'){transitive = false}
 	providedCompile(group: 'org.apache.httpcomponents', name:'httpmime', version:'4.3.1'){transitive = false}
-	
-	providedCompile(group: 'org.testng', name:'testng', version:'6.8.8'){exclude module: 'hamcrest-core'}
+	providedCompile configurations.testNG
+ 	providedCompile configurations.webdriver
+	providedCompile configurations.restAssured
+
 	providedCompile(group: 'org.codehaus.groovy', name:'groovy-all', version:'2.2.1'){transitive = false}
 	
-	providedCompile(group: 'com.jayway.restassured', name:'json-path', version:'2.3.1'){transitive = false}
-	providedCompile(group: 'com.jayway.restassured', name:'xml-path', version:'2.3.1'){transitive = false}
-	providedCompile(group: 'com.jayway.restassured', name:'rest-assured-common', version:'2.3.1')
-	providedCompile(group: 'com.jayway.restassured', name:'rest-assured', version:'2.3.1')
+
   providedCompile(group: 'com.oracle.emaas.emcpsm', name:'registry-lookup-client', version:'1.0.0+') 
   providedCompile(group: 'com.oracle.emaas', name: 'emaas-platform-tenant-sdk', version: '0.2') {
       exclude group: 'emaas.platform', module: 'registry-lookup-client'
