commit by shiva

--- a/gradle.properties
+++ b/gradle.properties
@@ -24,6 +24,8 @@ org.gradle.jvmargs=-XX:MaxPermSize=2g
 #==============================================================================
 devinfraVersion=1.0.+
 testinfraVersion=1.1.+
+# OMCTF Version
+omctfVersion=1.3.+
 #==============================================================================
 artifactory_repoName=emaas-virtual
 artifactory_repoKey=emaas-sandbox-local
