--- a/tests/suites/emcpssf_upgrade_test_3n.gradle
+++ b/tests/suites/emcpssf_upgrade_test_3n.gradle
@@ -31,8 +31,21 @@ repositories {
 /******* ExtraProperties declaration ******/
 
 dependencies {
-    testConfig group: 'com.oracle.emaas.emcpdf.test', name:'dashboards-upgrade-tests-integ-tests', version: "${REPO_BID}"
-    testConfig group: 'com.oracle.emaas.emcpdf.test', name:'dashboards-uitest-integ-tests', version: "${REPO_BID}" 
+    testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-web-integ-tests', version: "${REPO_BID}"){ exclude('module':'groovy') }
+    testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-web', version: "${REPO_BID}") {transitive = false}
+
+    testConfig group: 'com.oracle.emaas.emcpssf.test', name:'savedsearch-upgrade-tests-integ-tests', version: "${REPO_BID}"
+    //testConfig group: 'com.oracle.emaas.emcpdf.test', name:'dashboards-uitest-integ-tests', version: "${REPO_BID}"
+
+   testConfig(group: 'javax.servlet', name:'servlet-api', version:'2.5'){ transitive = false }
+	testConfig(group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.0'){ transitive = false }
+	testConfig(group: 'org.apache.logging.log4j', name:'log4j-core', version:'2.0.1'){ transitive = false }
+  testConfig(group: 'org.apache.logging.log4j', name:'log4j-api', version:'2.0.1'){ transitive = false }
+
+	configurations{
+		restAssured.exclude module: 'groovy'
+	}
+ 
 }
 
 //Add data population(pre-upgrade) tests or tasks here
