--- a/tests/suites/emcpssf_upgrade_test_3n.gradle
+++ b/tests/suites/emcpssf_upgrade_test_3n.gradle
@@ -34,8 +34,8 @@ apply from: 'setup.gradle'
 
 
 dependencies {
-           testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-web-integ-tests',version: "${REPO_BID}"
-           testConfig (group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-upgrade-tests-integ-tests', version: "${REPO_BID}" 
+           testConfig group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-web-integ-tests',version: "${REPO_BID}"
+           testConfig group: 'com.oracle.emaas.emcpssf.test', name: 'savedsearch-upgrade-tests-integ-tests', version: "${REPO_BID}" 
 }
 
 
