--- a/tests/suites/emcpssf_upgrade_test_3n.gradle
+++ b/tests/suites/emcpssf_upgrade_test_3n.gradle
@@ -74,7 +74,7 @@ task post_upgrade (type: EMTest, dependsOn: [omcCloudUpgrade,omcTenantAgentSetup
     options.suiteXmlBuilder().suite('name': 'PostUpg') {
       test('name': 'post_upg') {
            classes([:]) {
-                'class'('name': oracle.sysman.emSDK.emaas.platform.savedsearch.test.folder.FolderCRUD')
+                'class'('name': 'oracle.sysman.emSDK.emaas.platform.savedsearch.test.folder.FolderCRUD')
         } 
 
     }
