--- a/savedsearch-ear/build.gradle
+++ b/savedsearch-ear/build.gradle
@@ -31,8 +31,8 @@ dependencies
 	earlib (project(':savedsearch-core')){transitive = false}
 	earlib (project(':savedsearch-entities')){transitive = false}
 	earlib (project(':savedsearch-web-utils')){transitive = false} 
-	earlib(group: 'com.oracle.emaas.emcpsm', name: 'registry-lookup-client', version: '1.0.0+') {transitive=false }
-	earlib(group: 'com.oracle.emaas.emcpsm', name: 'registry-client', version: '1.0.0+') {transitive=false }
+	earlib(group: 'com.oracle.emaas.emcpsm', name: 'registry-lookup-client', version: '1.+') {transitive=false }
+	earlib(group: 'com.oracle.emaas.emcpsm', name: 'registry-client', version: '1.+') {transitive=false }
         earlib(group: 'org.apache.zookeeper', name:'zookeeper', version:'3.4.6') {transitive=false }
         earlib(group: 'com.oracle.emaas', name: 'emaas-platform-tenant-sdk', version: '0.2') {transitive=false }
         earlib(group: 'org.apache.httpcomponents', name:'httpclient', version:'4.3.1')
