--- a/savedsearch-tools/.classpath
+++ b/savedsearch-tools/.classpath
@@ -15,8 +15,8 @@
 	<classpathentry kind="var" path="SSF/dependencies/artifactory/json-path-1.8.1.jar"/>
 	<classpathentry kind="var" path="SSF/dependencies/artifactory/xml-path-1.9.0.jar"/>
 	<classpathentry kind="var" path="SSF/dependencies/artifactory/log4j-core-2.0.1.jar"/>
-	<classpathentry kind="var" path="SSF/dependencies/artifactory/registry-client-1.0.0.jar"/>
-	<classpathentry kind="var" path="SSF/dependencies/artifactory/registry-lookup-client-1.0.0.jar"/>
+	<classpathentry kind="var" path="SSF/dependencies/artifactory/registry-client-1.x.jar"/>
+	<classpathentry kind="var" path="SSF/dependencies/artifactory/registry-lookup-client-1.x.jar"/>
 	<classpathentry kind="var" path="SSF/dependencies/artifactory/jackson-core-asl-1.9.13.jar"/>
 	<classpathentry kind="var" path="SSF/dependencies/artifactory/jackson-mapper-asl-1.9.13.jar"/>
 	<classpathentry kind="var" path="SSF/dependencies/artifactory/jersey-core-1.17.1.jar"/>
