--- a/savedsearch-tools/test.gradle
+++ b/savedsearch-tools/test.gradle
@@ -24,8 +24,8 @@ dependencies{
 
         lrgConfig(group: 'org.codehaus.jettison', name: 'jettison', version: '1.3.4'){ transitive = false }
         lrgConfig(group: 'log4j', name: 'log4j', version: '1.2.17'){ transitive = false }
-      	lrgConfig(group: 'emaas.platform', name: 'registry-client', version: '0.23.6'){ transitive = false }
-        lrgConfig(group: 'emaas.platform', name: 'registry-lookup-client', version: '0.23.6'){ transitive = false }
+      	lrgConfig(group: 'emaas.platform', name: 'registry-client', version: '1.+'){ transitive = false }
+        lrgConfig(group: 'emaas.platform', name: 'registry-lookup-client', version: '1.+'){ transitive = false }
 
         lrgConfig(group: 'org.apache.commons', name:'commons-lang3', version:'3.1'){ transitive = false }
 
