--- a/savedsearch-web-utils/build.gradle
+++ b/savedsearch-web-utils/build.gradle
@@ -13,6 +13,6 @@ dependencies {
 	compile(group: 'org.apache.logging.log4j', name:'log4j-core', version:'2.0.1')
         compile(group: 'org.apache.logging.log4j', name:'log4j-api', version:'2.0.1')
         compile(group: 'com.oracle.adf', name: 'wls-api', version: '12.1.2-0-0')
-        compile(group: 'com.oracle.emaas.emcpsm', name: 'registry-lookup-client', version: '1.0.0+')
-        compile(group: 'com.oracle.emaas.emcpsm', name: 'registry-client', version: '1.0.0+')
+        compile(group: 'com.oracle.emaas.emcpsm', name: 'registry-lookup-client', version: '1.+')
+        compile(group: 'com.oracle.emaas.emcpsm', name: 'registry-client', version: '1.+')
 } 
