--- a/build.gradle
+++ b/build.gradle
@@ -202,8 +202,8 @@ task preBuildCompile(type: Copy) {
    from configurations.testNG
    from configurations.prebuild_wlfullc
    into "$afDir"
-   rename 'registry-lookup-client-1.\d+.\d+-(.*).jar', 'registry-lookup-client-1.x.jar'
-   rename 'registry-client-1.\d+.\d+-(.*).jar', 'registry-client-1.x.jar'
+   rename 'registry-lookup-client-1.(.*)-(.*).jar', 'registry-lookup-client-1.x.jar'
+   rename 'registry-client-1.(.*)-(.*).jar', 'registry-client-1.x.jar'
 }
 
 compileJava.dependsOn preBuildCompile
